Typewrite version now slams down ink.  Need to divide into rows and fix random alignment.

--- a/src/App.css
+++ b/src/App.css
@@ -47,3 +47,6 @@
 .matrix-keyboard{
   background-color: black;
 }
+canvas{
+  -webkit-tap-highlight-color: transparent;
+}
